# shoal

./: .gitignore  README.md  RESULTS.md  phase2_notes.txt  pyproject.toml  requirements.txt
scripts/: download_corpus.py  fetch_fandom.py  fetch_wikipedia.py  ingest_corpus.sh
src/shoal/: __init__.py  _cli.py  _engine.py  _ingest.py  _models.py  _parsers.py  _retrieve.py  _storage.py  _vocab.py
tests/: conftest.py  test_engine.py  test_ingest.py  test_parsers.py  test_retrieval_quality.py  test_retrieve.py  test_storage.py  test_vocab.py
